litmask/tests/compile/unmasked_multi_arg.stderr
error: unexpected token
 --> tests/compile/unmasked_multi_arg.rs:7:26
  |
7 |     let _ = unmasked!("a", "b");
  |                          ^
