litmask/tests/compile/unmasked_multi_arg.rs
//! `unmasked!` accepts exactly one literal — extra arguments must
//! fail at compile time.

use litmask::unmasked;

fn main() {
    let _ = unmasked!("a", "b");
}
